--- a/exercise-8-master/index.html
+++ b/exercise-8-master/index.html
@@ -9,7 +9,7 @@
     <!-- header begins -->
     <header id="top">
       <h1>CatComputing.com</h1>
-      <p><em>Grand Opening: Monday, October 8</p>
+      <p><em>Grand Opening: Monday, October 8</em></p>
 
       <nav>
         <ul>
@@ -26,9 +26,10 @@
     <!-- main begins -->
     <main>
       <section id="hardware">
-        <h2>Hardware</h2>
+        
 
         <article>
+          <h2>Hardware</h2>
           <p>The hardware department of CatComputing.com is managed by Flynn's Retro Computers, a web shop dedicated to old-school minicomputers from the 1970s and 1980s. We've got the most complete <em>cat</em>alog anywhere on the Internet!</p>
 
           <aside>
@@ -41,12 +42,12 @@
 
 
       <section id="software">
-        <h2>Software</h2>
         <article>
+          <h2>Software</h2>
           <p>The software department of CatComputing.com is managed by Quorra's Software Shack. We can supply all your software needs, from programming languages and operating systems to applications and games.</p>
 
           <aside>
-            <img src="vintage-software.jpg" />
+            <img src="vintage-software.jpg" alt="Vintage Software"/>
             <p>Only the finest software! <em>(Photo by Greg Smith, CC BY-NC 2.0)</em></p>
           </aside>
 
